iter 3 and 4 finished according to tests